--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Star Wars API</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="container"></div>
   </body>
 </html>
 
